# vectoreels

./: .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  main.py  pyproject.toml
scripts/: find_irrelevant_captions.py
src/vectoreels/: cli.py  ingest.py  irrelevant_captions.py  irrelevant_captions.txt  mining.py  models.py  process.py  relevance.py  search.py  web.py
src/vectoreels/download/: audio.py  cookies.py  extract.py  fetch.py  formats.py  media.py  music.py
src/vectoreels/embedding/: audio.py  decode.py
src/vectoreels/ingestion/: ingest.py
src/vectoreels/processing/: irrelevant_captions.py  irrelevant_captions.txt  irrelevant_captions_file.py  mining.py  ownership.py  process.py  relevance.py
src/vectoreels/search/: query.py  search.py
src/vectoreels/templates/: _upload_status.html  base.html
src/vectoreels/web/: app.py
src/vectoreels/web/templates/: _cookies_status.html  _results.html  _upload_status.html  index.html
tests/: test_cli.py  test_cookies.py  test_download_formats.py  test_extract.py  test_ingest.py  test_irrelevant_captions_file.py  test_mining.py  test_models.py  test_ownership.py  test_process.py  test_query.py  test_relevance.py  test_search.py
