[project]
name = "vectoreels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elasticsearch>=8.15,<9",
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.50.2",
    "yt-dlp==2026.7.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vectoreels"]
