[project]
name = "vectoreels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elasticsearch>=8.15,<9",
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "laion-clap>=1.1.7",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "torch>=2.12.1",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.1",
    "uvicorn[standard]>=0.50.2",
    "yt-dlp==2026.7.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[project.scripts]
vectoreels = "vectoreels.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vectoreels"]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
